<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gabrielaangebrandt.mojerezije.Login">

    <!--USERNAME-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_username"
        android:layout_marginTop="119dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textAutoComplete"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    </android.support.design.widget.TextInputLayout>
    <!--PASSWORD-->

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:inputType="textPassword"
        android:layout_below="@+id/text_input_layout"
        android:layout_marginTop="20dp"
        android:hint="@string/prompt_password">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="textPassword"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <!--LOGIN BUTTON-->

    <Button
        android:id="@+id/btn_login1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/text_input_layout1"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:text="@string/logIn"
        android:padding="16dp"/>

    <!--OR-->

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="16sp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btn_login1"/>

    <!-- REGISTER BUTTON-->

    <Button
        android:id="@+id/btn_register"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv_or"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@drawable/button_shape"
        android:text="@string/register"
        android:padding="16dp"/>

    <!--FORGOT PASSWORD-->

    <TextView
        android:id="@+id/tv_forgotten_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgottenPass"
        android:padding="16dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btn_register"
        android:clickable="true"
        android:background="@color/white"/>



</RelativeLayout>
