<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/uputeOpis"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_margin="8dp"
                android:elevation="4sp"
                android:padding="8dp"
                android:src="@drawable/registrationscreenshot" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_margin="8dp"
                android:elevation="4sp"
                android:padding="8dp"
                android:src="@drawable/registrationscreenshot2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/uputeOpis1"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_margin="8dp"
                android:elevation="4sp"
                android:src="@drawable/loginscreenshot" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/uputeOpis2"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_margin="8dp"
                android:elevation="4sp"
                android:src="@drawable/billsscreenshot" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/uputeOpis3"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_margin="8dp"
                android:elevation="4sp"
                android:src="@drawable/newbillscreenshot" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/uputeOpis4"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="400dp"
                android:layout_margin="8dp"
                android:elevation="4sp"
                android:src="@drawable/newbillscreenshot" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
