<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--KAMERA-->
            <ImageButton
                android:id="@+id/ib_camera_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_margin="16dp"
                android:background="@drawable/cameraicon" />

            <!--NASLOV-->
            <TextView
                android:id="@+id/tv_vrijednostiracuna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_toLeftOf="@+id/ib_camera_btn"
                android:layout_toStartOf="@+id/ib_camera_btn"
                android:text="@string/vrijednostiracuna"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="28sp"
                android:textAlignment="center"/>

            <!--VRSTA RAČUNA-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_naziv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_vrijednostiracuna"
                android:layout_marginTop="8dp"
                android:hint="@string/naziv">

                <EditText
                    android:id="@+id/et_naziv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:inputType="textAutoComplete"
                    android:paddingBottom="8dp"
                    android:paddingTop="16dp"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <!--TVRTKA KOJOJ PLAĆAMO RAČUN-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_tvrtka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_layout_naziv"
                android:layout_marginTop="8dp"
                android:hint="@string/tvrtka">

                <EditText
                    android:id="@+id/et_tvrtka"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:inputType="textAutoComplete"
                    android:paddingBottom="8dp"
                    android:paddingTop="16dp"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <!--DATUM DOSPIJEĆA RAČUNA-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_datum_zaprimljenosti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_layout_tvrtka"
                android:layout_marginTop="8dp"
                android:hint="@string/datumDostavljanja">

                <EditText
                    android:id="@+id/et_datumZaprimljenosti"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:inputType="date"
                    android:paddingBottom="8dp"
                    android:paddingTop="16dp"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <!--MJESEC ZA KOJI PLAĆAMO-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_mjesec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_layout_datum_zaprimljenosti"
                android:layout_marginTop="8dp"
                android:hint="@string/mjesec">

                <EditText
                    android:id="@+id/et_mjesec"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:inputType="date"
                    android:paddingBottom="8dp"
                    android:paddingTop="16dp"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <!--IZNOS-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_iznos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/text_input_layout_mjesec"
                android:layout_marginTop="8dp"
                android:layout_toLeftOf="@+id/tv_kn"
                android:hint="@string/iznos">

                <EditText
                    android:id="@+id/et_iznos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:inputType="numberDecimal"
                    android:paddingBottom="8dp"
                    android:paddingTop="16dp"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>

            <!--KN-->
            <TextView
                android:id="@+id/tv_kn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/text_input_layout_iznos"
                android:layout_alignEnd="@+id/ib_camera_btn"
                android:layout_alignRight="@+id/ib_camera_btn"
                android:padding="8dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/kn"
                android:textSize="20sp" />

            <!--RADIOGROUP-->
            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_margin="16dp"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_below="@+id/text_input_layout_iznos"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_placen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/placeniRacun"
                    android:textSize="20sp"/>

                <RadioButton
                    android:id="@+id/rb_neplacen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/neplaceniRacun"
                    android:textSize="20sp"/>
            </RadioGroup>

            <!--BUTTON ZA DODAVANJE NA LISTU-->
            <Button
                android:id="@+id/btn_potvrdi"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/radio_group"
                android:background="@drawable/button_shape_red"
                android:text="@string/potvrdi"
                android:textColor="@color/colorPrimaryDark" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
