<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gabrielaangebrandt.mojerezije.registration.Registration">

    <!--SCROLLVIEW-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--IME-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/name">

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:inputType="textPersonName"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_below="@+id/text_input_layout_name"
                android:text="@string/hint_name"
                android:layout_marginLeft="16dp"
                android:textSize="10sp"
                android:layout_marginRight="16dp"/>

            <!--ADRESA KUĆANSTVA-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_addrKucanstva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_layout_name"
                android:layout_marginTop="8dp"
                android:hint="@string/addrKucanstva">

                <EditText
                    android:id="@+id/et_addr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/et_username"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:inputType="textPassword"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_below="@+id/text_input_layout_addrKucanstva"
                android:text="@string/hint_addr"
                android:layout_marginLeft="16dp"
                android:textSize="10sp"
                android:layout_marginRight="16dp"/>

            <!--EMAIL-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_layout_addrKucanstva"
                android:layout_marginTop="8dp"
                android:hint="@string/email">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/et_username"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:inputType="textPassword"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <!--  KORISNIČKO IME-->

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_layout_email"
                android:layout_marginTop="16dp"
                android:hint="@string/username">

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/et_name"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="25dp"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_below="@+id/text_input_layout_username"
                android:text="@string/hint_Username"
                android:textSize="10sp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"/>

            <!--LOZINKA1-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_layout_username"
                android:layout_marginTop="16dp"
                android:hint="@string/password">

            <EditText
                android:id="@+id/et_password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/et_username"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="25dp"
                android:inputType="textPassword"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>

            <!--LOZINKA2-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_input_layout_password"
                android:layout_marginTop="8dp"
                android:hint="@string/repeatPassword">

                <EditText
                    android:id="@+id/et_password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/et_username"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:inputType="textPassword"
                    android:paddingTop="16dp"
                    android:paddingBottom="8dp"
                    android:textSize="20sp"
                    android:layout_alignParentEnd="true" />
            </android.support.design.widget.TextInputLayout>

            <!--DODAJ VRSTE RAČUNA-->
            <TextView
                android:id="@+id/dodajRacune"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dodajracune"
                android:layout_below="@+id/text_input_layout_password2"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="8dp"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/racun1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="racun1"
                android:layout_alignBaseline="@+id/dodajRacune"
                android:layout_toRightOf="@+id/dodajRacune"
                android:layout_toEndOf="@+id/dodajRacune" />

            <EditText
                android:id="@+id/racun2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="racun1"
                android:layout_below="@+id/racun1"
                android:layout_toRightOf="@+id/dodajRacune"
                android:layout_toEndOf="@+id/dodajRacune"
                />
            <EditText
                android:id="@+id/racun3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="racun1"
                android:layout_below="@+id/racun2"
                android:layout_toRightOf="@+id/dodajRacune"
                android:layout_toEndOf="@+id/dodajRacune" />

            <EditText
                android:id="@+id/racun4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="racun1"
                android:layout_below="@+id/racun3"
                android:layout_toRightOf="@+id/dodajRacune"
                android:layout_toEndOf="@+id/dodajRacune" />

            <EditText
                android:id="@+id/racun5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="racun1"
                android:layout_below="@+id/racun4"
                android:layout_toRightOf="@+id/dodajRacune"
                android:layout_toEndOf="@+id/dodajRacune" />

            <!--PLACA-->
            <EditText
                android:id="@+id/datumPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/racun5"
                android:hint="@string/datumPlace"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="8dp"
                android:textSize="20sp"
                android:inputType="datetime"/>

            <!--GUMB ZA REGISTRACIJU-->

            <Button
                android:id="@+id/btn_register_player"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/datumPlace"
                android:background="@color/colorAccent"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="25dp" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
